# scraper-api

./: .gitignore  README.md  gunicorn.conf.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: main.py
app/core/: settings.py
app/models/: games.py  news.py
app/routes/api/: router.py
app/routes/api/v1/: games.py  news.py
app/routes/graphql/: querys.py  schemas.py  types.py
app/services/: fetch.py  games_commands.py  games_services.py  news_commands.py  news_services.py
tests/: fixtures.py
tests/api/: test_api_games.py  test_api_news.py
tests/graphql/: test_graphql_games.py  test_graphql_news.py
tests/graphql/utils/: querys.py
tests/services/: test_game_services.py  test_news_services.py  test_services_games_commands.py  test_services_news_commands.py
